--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@types/react-redux": "^7.1.20",
     "dva-core-ts": "^2.0.7",
+    "dva-loading-ts": "^3.0.23",
     "react": "17.0.2",
     "react-native": "0.66.2",
     "react-native-config": "^1.4.5",
+    "react-native-pager-view": "^5.4.9",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-svg": "12.0.3",
+    "react-native-tab-view": "^3.1.1",
     "react-redux": "^7.2.6"
   },
   "devDependencies": {
@@ -33,6 +38,7 @@
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
+    "react-native-iconfont-cli": "^2.2.4",
     "react-test-renderer": "17.0.2",
     "typescript": "^3.8.3"
   },
