--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@types/react-native-snap-carousel": "3.8.4",
     "@types/react-redux": "^7.1.20",
+    "axios": "^0.24.0",
     "dva-core-ts": "^2.0.7",
     "dva-loading-ts": "^3.0.23",
     "react": "17.0.2",
@@ -23,6 +25,7 @@
     "react-native-pager-view": "^5.4.9",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-snap-carousel": "3.8.4",
     "react-native-svg": "12.0.3",
     "react-native-tab-view": "^3.1.1",
     "react-redux": "^7.2.6"
